# carla1s-ros

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md
carla-navigation/carla_decision/: CMakeLists.txt  README.md  package.xml
carla-navigation/carla_decision/launch/: carla_decision_test.launch  carla_decision_test_parking.launch  carla_decision_test_with_fake_perception.launch
carla-navigation/carla_decision/node_templates/: node_templates.xml
carla-navigation/carla_decision/src/: blackboard_handler.cpp  blackboard_handler.h  carla_decision.cpp  carla_decision.h  carla_decision_common.h  carla_decision_node.cpp  common.h  node_types.h  test_bt.cpp  test_bt.h  test_bt_node.cpp  types.h
carla-navigation/carla_decision/src/bt_node_base/: bt_action_node.h  bt_planner_node.h
carla-navigation/carla_decision/src/bt_nodes/: nodes_factory.cpp  nodes_factory.h
carla-navigation/carla_decision/src/node_base/: bt_action_node.h
carla-navigation/carla_decision/src/util/: bt_conversions.h
carla-navigation/carla_decision/trees/: avp_demo.xml  avp_demo_full.xml  avp_demo_reeds_shepp.xml  goal_behavior.xml  goal_behavior_new.xml
carla-navigation/carla_global_planner/: CMakeLists.txt  package.xml  setup.py
carla-navigation/carla_global_planner/launch/: carla_global_planner.launch  carla_waypoint_publisher.launch
carla-navigation/carla_global_planner/src/carla_global_planner/: carla_global_planner.py  carla_global_planner_node.py  carla_map_visualization.py  reeds_ros_inter.py  reeds_shepp.py  reeds_shepp_ros.py
carla-navigation/carla_global_planner/src/carla_waypoint_publisher/: carla_route_planner.py  carla_waypoint_publisher.py
carla-navigation/carla_maps/: CMakeLists.txt  package.xml
carla-navigation/carla_maps/cmake/: FindPugiXML.cmake
carla-navigation/carla_maps/src/: carla_maps.cpp  carla_maps.h  carla_maps_node.cpp
carla-navigation/carla_nav_msgs/: CMakeLists.txt  package.xml
carla-navigation/carla_nav_msgs/action/: ParkingPlanner.action  PathPlanner.action  PathTracking.action  TrackingPath.action
carla-navigation/carla_nav_msgs/msg/: ParkingSpot.msg  ParkingSpotArray.msg  Path.msg  PathSegment.msg
carla-navigation/carla_path_tracking/: CMakeLists.txt  package.xml
carla-navigation/carla_path_tracking/config/: path_tracking.yaml
carla-navigation/carla_path_tracking/launch/: tracking.launch
carla-navigation/carla_path_tracking/scripts/: cmd_vel_to_ackermann_drive.py
carla-navigation/carla_path_tracking/src/: path_tracking.cpp  path_tracking.h  path_tracking_base.cpp  path_tracking_base.h  path_tracking_node.cpp  planner_common.h  pure_pursuit.cpp
carla-navigation/carla_path_tracking/src/common/: pid_impl.h  timer.h
carla-navigation/carla_path_tracking/src/impl/: pid.cpp  pid.h  pure_pursuit.cpp  pure_pursuit.h
carla-navigation/carla_path_tracking/src/lat_controller/: pid_lat_controller.cpp  pure_pursuit.h
carla-navigation/carla_path_tracking/src/lon_controller/: lon_controller_base.h  pid_lon_controller_test.cpp
carla-navigation/carla_verticla_parking/: CMakeLists.txt  package.xml  setup.py
carla-navigation/carla_verticla_parking/launch/: carla_verticla_parking.launch
carla-navigation/carla_verticla_parking/src/carla_vertical_parking/: __init__.py  arc_and_line_planning.py  carla_vertical_parking_node.py  carla_verticle_parking_tracking_node.py  get_best_parking_position.py  hybird_astar_planing.py  unuse_vertical_parking.py  vertical_parking.py  yuanhu_parking_planning.py
carla-navigation/carla_visualization/: CMakeLists.txt  package.xml  setup.cfg  setup.py
carla-navigation/carla_visualization/src/carla_visualization/: opendrive_sensor.py  traffic_lights_sensor.py
carla1s_navigation/carla1s_bringup/: CMakeLists.txt  README.md  package.xml
carla1s_navigation/carla1s_bringup/config/: lidar_rgb_seg.json  nav_minimum.json  sensors.json  sensors_lidar_rgb.json  two_vehicle.json
carla1s_navigation/carla1s_bringup/launch/: carla_example_avp_demo.launch  carla_example_ego_vehicle.launch  carla_example_with_two_vehicles.launch  carla_lego_loam.launch  carla_move_base.launch  move_base.launch
carla1s_navigation/carla1s_bringup/maps/: Town02.yaml  Town04.yaml  Town06.yaml
carla1s_navigation/carla1s_bringup/param/: ackermann_control.yaml
carla1s_navigation/carla1s_bringup/rviz/: view_nav.rviz
carla1s_navigation/carla1s_bringup/scripts/: carla_map_visualization.py  draw_occupancygrid.py
carla1s_navigation/carla1s_common/: CMakeLists.txt  package.xml
carla1s_navigation/carla1s_common/include/carla_nav_types/: common_types.h  conversions.h
carla1s_navigation/carla1s_decision/: CMakeLists.txt  package.xml
carla1s_navigation/carla1s_decision/launch/: carla_decision_test.launch  carla_decision_test_avp_with_fake_perception.launch  carla_decision_test_parking.launch  carla_decision_test_with_fake_perception.launch
carla1s_navigation/carla1s_decision/src/: blackboard_handler.cpp  blackboard_handler.h  carla1s_decision.cpp  carla1s_decision.h  carla1s_decision_common.h  carla1s_decision_node.cpp
carla1s_navigation/carla1s_decision/src/bt_node_base/: bt_action_node.h  bt_planner_node.h
carla1s_navigation/carla1s_decision/trees/: avp_demo.xml  avp_demo_full.xml  avp_demo_reeds_shepp.xml  move_to_goal.xml  nav_to_pose.xml  normal_agent.xml  normal_agent_avp.xml
carla1s_navigation/carla1s_fake_perception/: CMakeLists.txt  package.xml
carla1s_navigation/carla1s_fake_perception/launch/: fake_perception.launch
carla1s_navigation/carla1s_fake_perception/src/: object_detection.cpp  object_detection.h  traffic_light_node.cpp  traffic_light_perception.cpp  traffic_light_perception.h
carla1s_navigation/carla1s_planning/carla1s_parking_planner/: CMakeLists.txt  package.xml  setup.py
carla1s_navigation/carla1s_planning/carla1s_path_tracking/: CMakeLists.txt  README.md  package.xml
carla1s_navigation/carla1s_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
carla1s_navigation/carla1s_rviz_plugins/src/: behavior_tree_panel.cpp  behavior_tree_panel.h
carla_2d_nav/: CMakeLists.txt
docker/: Dockerfile  (+9 more)
(+227 files in other folders)
