<?xml version="1.0"?>
<package format="3">
  <name>carla_decision</name>
  <version>0.0.0</version>
  <description>The carla_decision package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kevinlad@todo.todo">kevinlad</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>carla_waypoint_types</exec_depend>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 1">roslaunch</build_depend>
  <build_depend condition="$ROS_VERSION == 1">rospy</build_depend>
  <exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>carla_nav_msgs</depend>

  <!-- ROS 2 DEPENDENCIES-->
  <depend condition="$ROS_VERSION == 2">rclpy</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>

</package>
