
<package>
    <name>carla1s_common</name>
    <version>1.0.0</version>
    <description>
        The common package for all carla nav packages
    </description>
    <author>KevinLAD</author>
    <maintainer email="licy@mail.sustech.edu.cn">KevinLAD</maintainer>
    <license>GPL 3.0 </license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roborts_msgs</build_depend>
    <build_depend>rospy</build_depend>

    <run_depend>actionlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>roborts_msgs</run_depend>
    <run_depend>rospy</run_depend>


    <export>
    </export>

</package>